# fullstack-moss-app

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.github/: CODEOWNERS
.github/workflows/: code-quality.yml  pr-workflow.yml
backend/: .gitignore  Cargo.toml  README.md
backend/.sqlx/: query-0defdb6b38ff44d5d4ba73e45c0236ecc769f3a38594dd41aaac230fac16b62f.json  query-11e96cfd8c2736f13ce55975ea910dd68640f6f14e38a4b3342d514804e3de27.json  query-20a3ec47946f35ed0b3ab72931b145f357e4235d21780a58127d1fe04095613c.json  query-4c7575ee45f7cef7cf00ce1e56608329a7ebafdd7d4b84ed4c3cf057ae574e28.json  query-5201684aeecf596a502b51f0d9768aa85c937cf931773fe06a7c7d49457fed36.json  query-68ed910f4a417aa54a35db00a93f7262346d7647e4c279806f2e9c6172f0b89f.json  query-7359e2da92b45a195b98b059989f69456beff2b3f5187ee3794b24aa55babdf5.json  query-7a25ec7a7cf6011706337e95ef95cfb259ba56c8721ab6105ebfc7aa1fd66c6f.json  query-9bab1709d596b1bb8229cce0852bd512b346e1010c5db360b76421210b84ef01.json  query-a2a9301d0df1164092ed47c4dd22e30de27ac96bacc8202e3599eead9a9a2a00.json  query-ac14da374cf38c2625ed478155baf172d41e1c7a5aa8e7b843f7973bb345e727.json  query-c8d86267771fd7e629e8a2fd739efbae54cbcad667d3c121950c3f7e369c13e7.json  query-d8a2e5a84611aba22339339296a45af3582be51fcfd8a99336f5594c649674e1.json  query-db084199deff63e4f835ebd091e7c461a755fccf5c37ebc642e9a53f1af1bcd3.json  query-ec20520047483f7f1e2e7896a45018cc8993f1607f665c8653aac9ca54f04160.json  query-f7d9635ff56737d43d1afb740f08b90a4f22fe46d0a5aa8df53b28f79ecfcdae.json
backend/api-server/: Cargo.toml  Dockerfile  docker-entrypoint.sh
backend/api-server/src/: apidocumentation.md  main.rs
backend/backend-server/: Cargo.toml  docker-entrypoint.sh
backend/backend-server/.sqlx/: query-232ccd067e3781e88d05778d24417e5da23e90f92adbcb658e59aad31d9e4150.json  query-7bafdc18c840980e7fe701659f2292c9ce6cb8040a0f1c9e880ae9f1ca44eb1b.json
backend/backend-server/api-server/: Cargo.toml  Dockerfile
backend/backend-server/api-server/python/: requirements.txt
backend/backend-server/api-server/python/Eyeblink/src/: correlation.py
backend/backend-server/api-server/src/: main.rs
backend/backend-server/migrations/: 20250630230435_create_initial_tables.sql
backend/backend-server/shared-logic/: Cargo.toml
backend/backend-server/shared-logic/src/: bc.rs  db.rs  lib.rs  lsl.rs  mockeeg.rs  models.rs
backend/backend-server/websocket-server/: Cargo.toml  Dockerfile
backend/backend-server/websocket-server/src/: main.rs
backend/headset_simulation/DataCollector/: stream  stream.cpp
backend/headset_simulation/src/: main.rs
backend/legacy code/: websocket code.rs
backend/migrations/: 20251101120000_add_sessions_and_frontend_state.sql  20260219120000_add_time_labels.sql  20260301000000_unique_eeg_session_time.sql  20260310120000_update_time_labels.sql  20263101120000_sessions_on_eeg_data.sql  20263103300000_add_auth_column.sql
backend/mint-backend-tauri-app/: README.md  package-lock.json  package.json
backend/mint-backend-tauri-app/src-tauri/: .gitignore  Cargo.toml  app.db  tauri.conf.json
backend/shared-logic/: .gitignore  Cargo.toml
backend/shared-logic/.sqlx/: query-4ca9e69e9cd8d371c8f3f62115bc1620736e9ad3720f6145df4c609309c927f6.json  query-5c1ab37e0e930c0f3049ea98fdbafb487c1b540df63cf7998cce53476baaf253.json  query-c90b5ff74f3f075f08b371a0fb6d18dd3fabd7c5bd5e5eaf3f618a5fbcd77abd.json
backend/shared-logic/src/: bc.rs  db.rs  lib.rs  lsl.rs  mockeeg.rs  models.rs  pipeline.rs
backend/test-lsl/: Cargo.toml
backend/websocket-server/: .dockerignore  Cargo.toml  Dockerfile
backend/websocket-server/src/: main.rs
frontend/: Dockerfile  README.md  arm5  arm6  arm7  design.md  m68k  package-lock.json  package.json  ppc  server.js  sh4  tailwind.config.ts  x86
frontend/.github/: pull_request_template.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/home/: page.tsx
frontend/app/welcome/: page.tsx
frontend/components/nodes/: source-node.tsx
frontend/components/notifications/: Notifications.tsx  index.ts
frontend/context/: GlobalContext.tsx  WebSocketContext.tsx
frontend/hooks/: useNodeData.ts  useWebsocket.tsx
frontend/lib/: backend-proxy.ts  eeg-api.ts  frontend-state.ts  pipeline.ts  processing.ts  session-api.ts
golang_simulator/: main.go
headset_simulation/: README.md
headset_simulation/golang_simulator/: go.mod
headset_simulation/lsl_headset/: go.mod  liblsl.so.2  main.go
lsl/: lsl  stream.cpp
mint-backend-tauri-app/: README.md  next.config.mjs  package-lock.json  package.json
mint-backend-tauri-app/legacy code/: websocket code.rs
mint-backend-tauri-app/src-tauri/: Cargo.toml  app.db  tauri.conf.json
src/: main.rs
(+102 files in other folders)
