[package]
name = "shared-logic"
version = "0.1.0"
edition = "2024"

[dependencies]
# Asynchronous Runtime - needed for database operations
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# SQLx: Asynchronous SQL toolkit for Rust, with compile-time query checking
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "postgres", "chrono", "uuid", "migrate"] }

# For handling dates and times in Rust (used with SQLx's chrono feature)
chrono = { version = "0.4", features = ["serde"] }

# For loading environment variables (e.g., DATABASE_URL)
dotenvy = "0.15"

# Logging library
log = "0.4"

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"                               