[package]
name = "websocket-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
dotenvy = "0.15" # Added for .env file loading
log = "0.4"      # Added for the log macros (info!, error!)
env_logger = "0.11" # Added for env_logger::init()
tokio-util = "0.7.15"

# Shared logic crate
shared-logic = { path = "../shared-logic" }